--- a/movieList/package.json
+++ b/movieList/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/selenium-webdriver": "^4.0.12",
-    "chromedriver": "^107.0.2",
-    "geckodriver": "^1.22.3",
-    "jest": "^26.6.3",
-    "selenium-webdriver": "^4.0.0-beta.3"
-}
+    "@types/jest": "^29.4.0",
+    "@types/selenium-webdriver": "^4.1.10",
+    "chromedriver": "^109.0.0",
+    "geckodriver": "^3.2.0",
+    "jest": "^29.4.1",
+    "selenium-webdriver": "^4.8.0"
+  }
 }
